--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   
-  <link rel="stylesheet" href="/public/css/styles.css">
+  <link rel="stylesheet" href="public/css/styles.css">
 </head>
 
 <body>
@@ -35,11 +35,11 @@
     </div>
   </div>
 
-  <script src="/data/stock.js"></script>
-  <script src="/js/modal.js"></script>
-  <script src="/js/cart.js"></script>
-  <script src="/js/home.js"></script>
-  <script src="/js/index.js"></script>
+  <script src="data/stock.js"></script>
+  <script src="js/modal.js"></script>
+  <script src="js/cart.js"></script>
+  <script src="js/home.js"></script>
+  <script src="js/index.js"></script>
   
 </body>
 
